# libtextclassifier

./: BUILD.gn  CONTRIBUTING.md  OWNERS  README.md
annotator/: annotator.cc  annotator.h  cached-features.cc  cached-features.h  collections.h  entity-data.fbs  feature-processor.cc  feature-processor.h  flatbuffer-utils.cc  flatbuffer-utils.h  model-executor.cc  model-executor.h  model.fbs  quantization.cc  quantization.h  strip-unpaired-brackets.cc  strip-unpaired-brackets.h  types.cc  types.h  zlib-utils.cc  zlib-utils.h
annotator/contact/: contact-engine-dummy.h  contact-engine.h
annotator/datetime/: extractor.cc  extractor.h  parser.cc  parser.h  utils.cc  utils.h
annotator/duration/: duration.cc  duration.h
annotator/experimental/: experimental-dummy.h  experimental.fbs  experimental.h
annotator/grammar/: grammar-annotator.cc  grammar-annotator.h  utils.cc  utils.h
annotator/grammar/dates/: cfg-datetime-annotator.cc  cfg-datetime-annotator.h  dates.fbs  extractor.cc  extractor.h  parser.cc  parser.h  timezone-code.fbs
annotator/grammar/dates/annotations/: annotation-options.h  annotation-util.cc  annotation-util.h  annotation.h
annotator/grammar/dates/utils/: annotation-keys.cc  annotation-keys.h  date-match.cc  date-match.h  date-utils.cc  date-utils.h
annotator/installed_app/: installed-app-engine-dummy.h  installed-app-engine.h
annotator/knowledge/: knowledge-engine-dummy.h  knowledge-engine-types.h  knowledge-engine.h
annotator/lookup/: lookup-engine.cc  lookup-engine.h  normalization-table.cc  normalization-table.h  normalizer.cc  normalizer.h
annotator/number/: number.cc  number.h
annotator/person_name/: person-name-engine-dummy.h  person-name-engine.h  person_name_model.fbs
annotator/pod_ner/: pod-ner-dummy.h  pod-ner.h
annotator/translate/: translate.cc  translate.h
annotator/vocab/: vocab-annotator-dummy.h  vocab-annotator-impl.cc  vocab-annotator-impl.h  vocab-annotator.h  vocab-level-table.cc  vocab-level-table.h
lang_id/: custom-tokenizer.cc  custom-tokenizer.h  lang-id-wrapper.cc  lang-id-wrapper.h  lang-id.cc  lang-id.h  light-sentence.h  model-provider.h
lang_id/common/: embedding-feature-extractor.cc  embedding-feature-extractor.h  embedding-feature-interface.h  embedding-network-params.cc  embedding-network-params.h  embedding-network.cc  embedding-network.h  registry.h  stl-util.h  utf8.cc  utf8.h
lang_id/common/fel/: feature-descriptors.cc  feature-descriptors.h  feature-extractor.cc  feature-extractor.h  feature-types.h  fel-parser.cc  fel-parser.h  task-context.cc  task-context.h  workspace.cc  workspace.h
lang_id/common/file/: file-utils.cc  file-utils.h  mmap.cc  mmap.h
lang_id/common/flatbuffers/: embedding-network-params-from-flatbuffer.cc  embedding-network-params-from-flatbuffer.h  embedding-network.fbs  model-utils.cc  model-utils.h  model.fbs
lang_id/common/lite_base/: attributes.h  casts.h  compact-logging-levels.h  compact-logging-raw.cc  compact-logging-raw.h  compact-logging.cc  compact-logging.h  endian.h  float16.h  integral-types.h  logging.h  macros.h
lang_id/common/lite_strings/: numbers.cc  numbers.h  str-cat.h  str-split.cc  str-split.h  stringpiece.h
lang_id/common/math/: algorithm.h  checksum.cc  checksum.h  fastexp.cc  fastexp.h  hash.cc  hash.h  softmax.cc  softmax.h
lang_id/fb_model/: lang-id-from-fb.cc  lang-id-from-fb.h  model-provider-from-fb.cc  model-provider-from-fb.h
lang_id/features/: char-ngram-feature.cc  char-ngram-feature.h  light-sentence-features.cc  light-sentence-features.h  relevant-script-feature.cc  relevant-script-feature.h
lang_id/script/: approx-script-data.cc  approx-script-data.h  approx-script.cc  approx-script.h  script-detector.cc  script-detector.h  tiny-script-detector.cc  tiny-script-detector.h
utils/: checksum.cc  checksum.h  codepoint-range.cc  codepoint-range.fbs  codepoint-range.h  flatbuffers.cc  flatbuffers.fbs  flatbuffers.h  normalization.cc  normalization.fbs  normalization.h  optional.h  regex-match.cc  regex-match.h  resources.cc  resources.fbs  resources.h  tensor-view.cc  tensor-view.h  tflite-model-executor.cc  tflite-model-executor.h  token-feature-extractor.cc  token-feature-extractor.h  tokenizer.cc  tokenizer.fbs  tokenizer.h  variant.cc  variant.h
utils/base/: arena.cc  arena.h  casts.h  config.h  endian.h  integral_types.h  logging.cc  logging.h  logging_levels.h  logging_raw.cc  logging_raw.h  macros.h  port.h  prefixvarint.cc  prefixvarint.h  status.cc  status.h  status_macros.h  statusor.h  unaligned_access.h
utils/calendar/: calendar-common.h  calendar-dummy.h  calendar-icu.cc  calendar-icu.h  calendar.h
utils/container/: bit-vector.cc  bit-vector.fbs  bit-vector.h  double-array-trie.cc  double-array-trie.h  sorted-strings-table.cc  sorted-strings-table.h  string-set.h
utils/flatbuffers/: flatbuffers.h  mutable.cc  mutable.h  reflection.cc  reflection.h
utils/grammar/: callback-delegate.h  lexer.cc  lexer.h  match.cc  match.h  matcher.cc  matcher.h  rules-utils.cc  rules-utils.h  rules.fbs  types.h
utils/grammar/next/semantics/: expression.fbs
utils/grammar/utils/: ir.cc  ir.h  rules.cc  rules.cc~  rules.h
utils/hash/: farmhash.cc  farmhash.h
utils/i18n/: language-tag.fbs  locale.cc  locale.h
utils/intents/: intent-config.fbs  intent-generator.h  remote-action-template.h  zlib-utils.h
utils/math/: fastexp.cc  fastexp.h  softmax.cc  softmax.h
utils/memory/: mmap.cc  mmap.h
utils/sentencepiece/: encoder.cc  encoder.h  normalizer.cc  normalizer.h
utils/strings/: append.cc  append.h  numbers.cc  numbers.h  split.cc  split.h  stringpiece.h  substitute.cc  substitute.h  utf8.cc  utf8.h
utils/tflite/: dist_diversification.cc  dist_diversification.h  encoder_common.cc  encoder_common.h  text_encoder.cc  text_encoder.h  text_encoder_config.fbs  token_encoder.cc  token_encoder.h
utils/utf8/: unicodetext.cc  unicodetext.h  unilib-common.cc  unilib-common.h  unilib-dummy.cc  unilib-dummy.h  unilib-icu.cc  unilib-icu.h  unilib.h
utils/zlib/: buffer.fbs  tclib_zlib.h  zlib.cc  zlib_regex.cc  zlib_regex.h
