# Copyright 2020 The Chromium OS Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//common-mk/pkg_config.gni")
import("//common-mk/flatbuffer.gni")

group("all") {
  deps = [
    ":textclassifier",
  ]
}

pkg_config("tclib_config") {
  pkg_deps = [
    "zlib",
  ]
}

flatbuffer("flatbuffers") {
  sources = [
    "annotator/model.fbs",
    "annotator/entity-data.fbs",
    "utils/flatbuffers.fbs",
    "utils/i18n/language-tag.fbs",
    "utils/tflite/text_encoder_config.fbs",
    "utils/codepoint-range.fbs",
    "utils/resources.fbs",
    "utils/tokenizer.fbs",
    "utils/intents/intent-config.fbs",
    "utils/normalization.fbs",
    "utils/zlib/buffer.fbs",
  ]

  flatc_include_dirs = [ "." ]

  flatc_args = [
    "-c",
    "--keep-prefix",
    "--gen-object-api"
  ]
}

static_library("textclassifier") {
  all_dependent_configs = [ ":tclib_config" ]
  sources = [
    "annotator/annotator.cc",
    "annotator/cached-features.cc",
    "annotator/datetime/extractor.cc",
    "annotator/datetime/parser.cc",
    "annotator/duration/duration.cc",
    "annotator/feature-processor.cc",
    "annotator/flatbuffer-utils.cc",
    "annotator/model-executor.cc",
    "annotator/number/number.cc",
    "annotator/quantization.cc",
    "annotator/strip-unpaired-brackets.cc",
    "annotator/types.cc",
    "annotator/zlib-utils.cc",
    "utils/base/arena.cc",
    "utils/base/logging.cc",
    "utils/base/logging_raw.cc",
    "utils/base/status.cc",
    "utils/calendar/calendar-icu.cc",
    "utils/checksum.cc",
    "utils/codepoint-range.cc",
    "utils/container/double-array-trie.cc",
    "utils/container/sorted-strings-table.cc",
    "utils/flatbuffers.cc",
    "utils/hash/farmhash.cc",
    "utils/i18n/locale.cc",
    "utils/math/fastexp.cc",
    "utils/math/softmax.cc",
    "utils/memory/mmap.cc",
    "utils/normalization.cc",
    "utils/regex-match.cc",
    "utils/resources.cc",
    "utils/sentencepiece/encoder.cc",
    "utils/sentencepiece/normalizer.cc",
    "utils/strings/append.cc",
    "utils/strings/numbers.cc",
    "utils/strings/split.cc",
    "utils/strings/substitute.cc",
    "utils/strings/utf8.cc",
    "utils/tensor-view.cc",
    "utils/tflite-model-executor.cc",
    "utils/tflite/dist_diversification.cc",
    "utils/tflite/encoder_common.cc",
    "utils/tflite/text_encoder.cc",
    "utils/tflite/token_encoder.cc",
    "utils/token-feature-extractor.cc",
    "utils/tokenizer.cc",
    "utils/utf8/unicodetext.cc",
    "utils/utf8/unilib-common.cc",
    "utils/utf8/unilib-icu.cc",
    "utils/variant.cc",
    "utils/zlib/zlib.cc",
    "utils/zlib/zlib_regex.cc",
  ]

  deps = [ ":flatbuffers" ]

  defines = [
    "ZLIB_CONST",
    "TC3_DISABLE_LUA",
    "TC3_CALENDAR_ICU",
    "TC3_UNILIB_ICU",
  ]

  libs = [
    "flatbuffers",
    "tensorflowlite",
  ]

  include_dirs = [
    "//libtextclassifier",
    "${sysroot}/usr/include/flatbuffers",
    "${sysroot}/usr/include/icu-chrome/common/",
    "${sysroot}/usr/include/icu-chrome/i18n/",
    "${sysroot}/usr/include/tensorflow",
    "${root_gen_dir}/libtextclassifier",
  ]

  configs += [
    "//common-mk:nouse_thin_archive"
  ]
  configs -= [ "//common-mk:use_thin_archive" ]
}
